--- a/harfbuzz/Cargo.toml
+++ b/harfbuzz/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "harfbuzz"
 version = "0.4.0"
+edition = "2021"
 
 authors = ["The Servo Project Developers"]
 license = "MIT / Apache-2.0"
