--- a/harfbuzz/Cargo.toml
+++ b/harfbuzz/Cargo.toml
@@ -11,6 +11,9 @@ repository = "https://github.com/servo/rust-harfbuzz"
 documentation = "https://docs.rs/harfbuzz/"
 keywords = ["opentype", "font", "text", "layout", "unicode"]
 
+[dependencies]
+bitflags = "2.3.3"
+
 [dependencies.harfbuzz-sys]
 path = "../harfbuzz-sys"
 version = "0.5.0"
